--- a/FinalExam/Views/Home/Index.cshtml
+++ b/FinalExam/Views/Home/Index.cshtml
@@ -1,4 +1,10 @@
-﻿	<!-- spacer section -->
+﻿
+
+@model HomeVM	
+
+
+
+<!-- spacer section -->
 	<section class="spacer green">
 		<div class="container">
 			<div class="row">
@@ -91,42 +97,22 @@
 			<h4>Services</h4>
 			<!-- Four columns -->
 			<div class="row">
+
+			@foreach(Service service in Model.Services)
+			{
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/laptop.png" alt="" />
-						<h2>Web design</h2>
+						<img src="~/img/icons/@service.Image" alt="" />
+						<h2>@service.Name</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							@service.Description
 						</p>
 					</div>
 				</div>
-				<div class="span3 animated flyIn">
-					<div class="service-box">
-						<img src="img/icons/lab.png" alt="" />
-						<h2>Web development</h2>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-						</p>
-					</div>
-				</div>
-				<div class="span3 animated-fast flyIn">
-					<div class="service-box">
-						<img src="img/icons/camera.png" alt="" />
-						<h2>Photography</h2>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-						</p>
-					</div>
-				</div>
-				<div class="span3 animated-slow flyIn">
-					<div class="service-box">
-						<img src="img/icons/basket.png" alt="" />
-						<h2>Ecommerce</h2>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-						</p>
-					</div>
-				</div>
+				
+			}
+
+				
 			</div>
 		</div>
 	</section>
