--- a/FinalExam/Views/_ViewImports.cshtml
+++ b/FinalExam/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using FinalExam.ViewModels;
+@using FinalExam.Models;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
