Completed Task(add to BacPac file)

--- a/FinalExam/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/FinalExam/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -227,6 +227,13 @@
                             <a style="margin-left:50px;" asp-action="index" asp-controller="setting" asp-area="admin" class="btn btn-primary">Setting</a>
                         </a>
                     </li>
+
+                      <li class="nav-item">
+                        <a class="nav-link" href="documentation/documentation.html">
+                            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
+                            <a style="margin-left:50px;" asp-action="index" asp-controller="home" asp-area="default" class="btn btn-primary">Home Page</a>
+                        </a>
+                    </li>
                 </ul>
             </nav>
 
