--- a/FinalExam/Areas/Admin/Views/Setting/Index.cshtml
+++ b/FinalExam/Areas/Admin/Views/Setting/Index.cshtml
@@ -31,7 +31,7 @@
                                     @setting.Value
                                 </td>
                                 <td>
-                                    <a asp-action="update" asp-controller="service" asp-area="admin" asp-route-id="@setting.Id" class="btn btn-primary">Update</a>
+                                    <a asp-action="update" asp-controller="setting" asp-area="admin" asp-route-id="@setting.Id" class="btn btn-primary">Update</a>
                                    
                                 </td>
                             </tr>
